--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
-Makefile    @mattermost/core-build-engineers
-.github/*   @mattermost/core-build-engineers
+Makefile    @pfltdv
+.github/*   @pfltdv
