Define private pipeline to generate releases
Signed-off-by: Mustafa Kara <mustafa.kara@mattermost.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,3 @@
-Makefile    @phoinixgrr @pfltdv @spirosoik
-.github/*   @phoinixgrr @pfltdv @spirosoik
+Makefile            @phoinixgrr @pfltdv @spirosoik
+.github/*           @phoinixgrr @pfltdv @spirosoik
+.gitlab-ci.yml      @phoinixgrr @pfltdv @spirosoik
