Create Public Pipeline for notice-file-generator
Signed-off-by: Mustafa Kara <mustafa.kara@mattermost.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,4 @@
+build/*             @phoinixgrr @pfltdv @spirosoik
 Makefile            @phoinixgrr @pfltdv @spirosoik
 .github/*           @phoinixgrr @pfltdv @spirosoik
 .gitlab-ci.yml      @phoinixgrr @pfltdv @spirosoik
