--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -1,8 +1,11 @@
-on: [push]
-name: Checks
+name: CI
+
+on:
+  pull_request:
+
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: "Checkout Code"
         uses: "actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b" #v3.0.2
