feat: Bump golang docker version image

--- a/.config/notice-file/config.yaml
+++ b/.config/notice-file/config.yaml
@@ -4,3 +4,4 @@ copyright: "©2022 Mattermost, Inc.  All Rights Reserved.  See LICENSE.txt for l
 description: "This document includes a list of open source components used in Mattermost Motice File Generator, including those that have been modified."
 search:
   - "go.mod"
+includeDevDependencies: false
