Add support for additionalDependencies field

--- a/cmd/notice-file-generator/testdata/test.yaml
+++ b/cmd/notice-file-generator/testdata/test.yaml
@@ -7,9 +7,6 @@ reviewers:
   - reviewerOne
 search:
   - "package.json"
-dependencies:
-  - "wix"
-devDependencies: 
-  - "webpack"
-
+additionalDependencies:
+  - wix
 ...
