Add ignoreDependencies field

--- a/cmd/notice-file-generator/testdata/dependency_test.yaml
+++ b/cmd/notice-file-generator/testdata/dependency_test.yaml
@@ -1,12 +1,10 @@
 ---
-
 title: "Notice Title"
 copyright: "Notice Copyright"
 description: "Notice Description"
 reviewers:
   - reviewerOne
-search:
-  - "package.json"
+search: []
 additionalDependencies:
   - wix
   - ignored
