Add ignoreDependencies field (#21)
* Add ignoreDependencies field
* Support multiple newConfig() invocations

--- a/cmd/notice-file-generator/testdata/dependency_test.yaml
+++ b/cmd/notice-file-generator/testdata/dependency_test.yaml
@@ -4,8 +4,7 @@ copyright: "Notice Copyright"
 description: "Notice Description"
 reviewers:
   - reviewerOne
-search:
-  - "package.json"
+search: []
 additionalDependencies:
   - wix
   - ignored
